lager-lang/examples/good/05-01-if.lg
int main() {
    int x = 2;
    if (x > 0) {
        print(x); // 2
    }
    
    return 0;
}
