lager-lang/examples/bad/void_variable.lg
int main() {
    void x; // compile error
    return 0;
}